(Format: Year/Month/Day)
Changes for 0.9.2:
*03/04/26:
   * Add remember patch integration code (Simon)
     - note: does not include "startup" menu
     - save on close disabled atm, due to other issues...
     - enabled in configure by default, disable with --disable-remember
     - BIG thanks to Xavier Brouckaert (xbr at info.ucl.ac.be) for 
         the original remember patch!
     Makefile.am Remember.hh/cc Screen.cc Window.hh/cc fluxbox.cc
*03/04/25:
   * Fix small gcc 3.3 build issue (Simon)
     Window.hh/cc
   * Add UnderMousePlacement policy, plus minor positioning fix (Simon)
     -> Patch originally contributed by "Mike" (lgn@users.sf)
     Screen.hh Workspace.cc fluxbox.cc Window.cc
   * Fixed so WinButton updates sticky state from FluxboxWindow (Henrik)
     WinButton.hh/cc, Screen.cc   
   * Added basic drawable functions to FbWindow  (Henrik)
      * drawLine, drawRect, fillRect, copyArea
     FbWindow.hh/cc
   * Fixed SlitTheme (Henrik)
     Slit.cc/hh	 
   * Removed old theme engine (Henrik)
     Theme.hh/cc
   * Added RootTheme.hh/cc (Henrik)
     Screen.hh/cc, Workspace.cc, Slit.cc, IconBar.cc, Toolbar.cc
	 fluxbox.cc
*03/04/24:
  * updated fluxbox-generate_menu (Han)
   - decent reply to -- longopts
   - better ussage message
   - Added more OpenOffice entries
*03/04/21:
   * Fix toolbar startup and reconfigure things (Simon)
     (Thanks Brian Sea)
     Screen.cc
*03/04/20:
   * Snap to Windows (and toolbar, slit + screen edge) (Simon)
     Window.hh/cc
   * Directional focus movement (key actions FocusUp/Down/Left/Right) (Simon)
     Keys.hh/cc Screen.hh/cc fluxbox.cc
   * Added transparent menus, session.screen<num>.menuAlpha (Henrik)
     Menu.hh/cc, Transparent.hh/cc, Screen.hh/cc
02/04/17:
   * Fixed menu bug (Henrik)
     Menu.cc, Screen.cc
   * Fixed saving of toolbar mode (Simon)
     ToolbarHandler.cc
--------------------------------------------------------------
Changes for 0.9.1:
*03/04/16:
   * Fixed resize bug (Henrik)