@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.2:
 *03/04/26:
+   * Add remember layer (Simon)
+     Remember.hh/cc
    * Add remember patch integration code (Simon)
      - note: does not include "startup" menu
      - save on close disabled atm, due to other issues...
